# cached_pair

./: CHANGELOG.md  Cargo.toml  readme.md
src/: lib.rs  multi_pair.rs  pair.rs  star.rs  type_map.rs  utils.rs
src/multi_pair/: collections.rs
src/multi_pair/collections/: std.rs
src/pair/: tests.rs
